[package]
name = "pistellar_nexus_protocol"
version = "0.1.0"
edition = "2021"

# Description of the project
description = "A Rust implementation of the Pistellar Nexus Protocol for decentralized communication."
license = "MIT"
authors = ["KOSASIH"]
homepage = "https://github.com/KOSASIH/pistellar-nexus-protocol"
repository = "https://github.com/KOSASIH/pistellar-nexus-protocol"
keywords = ["decentralized", "protocol", "communication", "Rust"]

[dependencies]
# Asynchronous runtime for handling concurrent tasks
tokio = { version = "1", features = ["full"] }

# HTTP client for making requests
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography library for secure data handling
ring = "0.16"

# Logging library for debugging and monitoring
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"

# For WebSocket support for real-time communication
tokio-tungstenite = "0.15"

# For advanced data structures and algorithms
nalgebra = "0.29"

# For interacting with databases
diesel = { version = "2.0", features = ["r2d2", "sqlite"] }

# For creating a command-line interface
clap = { version = "3.0", features = ["derive"] }

# For advanced networking capabilities
async-std = "1.10"

# For protocol-specific features
pistellar = { git = "https://github.com/KOSASIH/pistellar", branch = "main" }

[features]
# Optional features for enhanced functionality
full = ["tokio", "reqwest", "serde", "ring", "log", "tokio-tungstenite", "nalgebra", "diesel", "clap", "async-std", "pistellar"]

# Feature flags for different environments
dev = ["log", "env_logger"]
prod = []

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = true
