[package]
name = "pi_coin"
version = "0.1.0"
edition = "2024"

# Description of the package
description = "Pi Coin: A stablecoin pegged to $314159,00"
license = "MIT"
authors = ["KOSASIH"]

[dependencies]
# Substrate dependencies for blockchain development
substrate = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-core = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }

# Cryptography
sha2 = "0.9.8"
rand = "0.8.5"
aes = "0.7"  # Advanced Encryption Standard for secure transactions

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server for API
actix-web = "4.0.0"
actix-rt = "2.5"  # Runtime for Actix

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }

# Database for persistent storage
diesel = { version = "2.0", features = ["r2d2", "sqlite"] }  # SQLite for lightweight storage

# Testing framework
mockito = "0.31"  # For mocking HTTP requests in tests

# Logging
log = "0.4"  # Logging framework
env_logger = "0.10"  # Logger for environment-based configuration

# Performance monitoring
prometheus = "0.13"  # For monitoring and metrics

[features]
default = ["std"]
std = [
    "substrate/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "serde/std",
    "actix-web/std",
    "tokio/std",
    "diesel/std",
    "log/std",
    "prometheus/std",
]

[profile.dev]
opt-level = 0
debug-assertions = true
overflow-checks = true  # Enable overflow checks in development

[profile.release]
opt-level = 3
lto = true  # Enable Link Time Optimization for better performance
